--- a/public/V2/Farmers/alter.html
+++ b/public/V2/Farmers/alter.html
@@ -80,7 +80,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="./tFInTH.html">
+                            <a class="nav-link text-white rounded text-center" href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
                             </a>
@@ -133,10 +133,10 @@
             </a>
         </div>
         <div class="container">
-            <nav aria-label="breadcrumb">
+            <nav class="mt-4" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
-                    <li class="breadcrumb-item">Farmers</a></li>
+                    <li class="breadcrumb-item"><a href="./Farmers.html">Farmers</a></li>
                     <li class="breadcrumb-item">Alter</a></li>
             </nav>
             <div class="card mt-5">
