--- a/public/V2/Farmers/create.html
+++ b/public/V2/Farmers/create.html
@@ -81,9 +81,9 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white"
+                            <a class="nav-link text-white rounded text-center "
                                 href="./tFInTH.html">
-                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
+                              <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
                             </a>
                         </li>
@@ -136,13 +136,13 @@
             </a>
         </div>
         <div class="container">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
+           <nav class="mt-2" aria-label="breadcrumb">
+                <ol class="breadcrumb mb-3">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
-                    <li class="breadcrumb-item">Farmers</a></li>
+                    <li class="breadcrumb-item"><a href="./Farmers.html">Farmers</a></li>
                     <li class="breadcrumb-item">Insert<Footer></Footer></a></li>
             </nav>
-            <div class="card mt-5">
+            <div class="card mt-3">
                 <div class="card-body">
                         <form onsubmit="return false" id="FormId">
                             <div class="mb-3 row">
