--- a/public/V2/Items/delete.html
+++ b/public/V2/Items/delete.html
@@ -110,7 +110,8 @@
         </div>
 
     </header>
-    <main>
+
+    <main class="content">
         <div id="toolbar" class="">
             <a id="RefreshATagId" href="#"
                 class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-dark text-white"
@@ -125,7 +126,7 @@
             </a>
         </div>
         <div class="container">
-            <nav aria-label="breadcrumb">
+           <nav class="mt-4" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
                     <li class="breadcrumb-item"><a href="./Items.html">Items</a></li>
@@ -133,13 +134,13 @@
             </nav>
             <div class="card mt-5">
                 <div class="card-body">
-                        <div class="table-responsive">
-                            <table id="table" class="table table-bordered table-striped">
-                            </table>
-                        </div>
+                    <div class="table-responsive">
+                        <table id="table" class="table table-bordered table-striped">
+                        </table>
                     </div>
                 </div>
             </div>
+        </div>
     </main>
 
     <footer class="mt-5 border-top text-dark" style="margin-top: 7rem !important;">
