--- a/public/V2/Sales/show.html
+++ b/public/V2/Sales/show.html
@@ -41,15 +41,16 @@
 <body>
     <header>
         <div class="px-3 py-2 text-bg-dark border-bottom">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <div class="container">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-                <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                    <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
-                    <span class="fs-4">KeshavSoft</span>
-                </a>
+                    <a href="/"
+                        class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+                        <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
+                        <span class="fs-4">KeshavSoft</span>
+                    </a>
 
-                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
 
                         <li>
                             <a href="../V2.html" class="nav-link text-white text-center">
@@ -81,8 +82,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white"
-                                href="./tFInTH.html">
+                            <a class="nav-link text-white text-center" href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
                             </a>
@@ -133,10 +133,10 @@
             </a>
         </div>
         <div class="container">
-            <nav aria-label="breadcrumb">
+            <nav class="mt-4" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
-                    <li class="breadcrumb-item">Sales</a></li>
+                <li class="breadcrumb-item"><a href="./Sales.html">Sales</a></li>
                     <li class="breadcrumb-item">Show</a></li>
             </nav>
             <div class="card mt-5">
