--- a/public/V2/Sales/tFInTH.html
+++ b/public/V2/Sales/tFInTH.html
@@ -134,7 +134,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
-                    <li class="breadcrumb-item">Sales</a></li>
+                   <li class="breadcrumb-item"><a href="./Sales.html">Sales</a></li>
                     <li class="breadcrumb-item">Insert Header <Footer></Footer></a></li>
             </nav>
             <div class="card mt-5">
