--- a/public/V2/Farmers/Farmers.html
+++ b/public/V2/Farmers/Farmers.html
@@ -77,8 +77,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white"
-                                href="./tFInTH.html">
+                            <a class="nav-link text-white rounded text-center" href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
                             </a>
@@ -116,9 +115,9 @@
 
     </header>
     <main>
-        <section class="py-5 mt-5">
+        <section class="py-3 mt-1">
             <div class="container">
-                <nav aria-label="breadcrumb">
+                <nav class="mt-4" aria-label="breadcrumb">
                     <ol class="breadcrumb mb-4">
                         <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
                         <li class="breadcrumb-item">Farmers</a></li>
@@ -145,20 +144,21 @@
                                             </a>
                                         </li>
                                         <li>
-
-                                            <li>
-                                            <a class="dropdown-item d-flex align-items-center" href="tFInTH.html">
-                                                <i class="bi bi-journal-plus text-warning me-3 fs-5"></i>
-                                                <span>Insert Header</span>
-                                            </a>
-                                        </li>
-
                                         <li>
                                             <a class="dropdown-item d-flex align-items-center" href="crud.html">
                                                 <i class="bi bi-building-add text-info me-3 fs-5"></i>
                                                 <span>Insert Footer</span>
                                             </a>
                                         </li>
+
+                                        <li>
+                                            <a class="dropdown-item d-flex align-items-center" href="tFInTH.html">
+                                                <i class="bi bi-journal-plus text-warning me-3 fs-5"></i>
+                                                <span>Insert Header</span>
+                                            </a>
+                                        </li>
+
+
 
                                         <li>
 
