--- a/public/V2/Farmers/tFInTH.html
+++ b/public/V2/Farmers/tFInTH.html
@@ -75,7 +75,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white"
+                            <a class="nav-link text-white rounded text-center"
                                 href="./crud.html">
                                 <i class="bi bi-building-add text-info d-block mb-1 fs-4"></i>
                                 Insert_F
@@ -134,10 +134,10 @@
             </a>
         </div>
         <div class="container">
-            <nav aria-label="breadcrumb">
+            <nav class="mt-4" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
-                    <li class="breadcrumb-item">Farmers</a></li>
+                    <li class="breadcrumb-item"><a href="./Farmers.html">Farmers</a></li>
                     <li class="breadcrumb-item">Insert Header <Footer></Footer></a></li>
             </nav>
             <div class="card mt-5">
