--- a/public/V2/Items/Items.html
+++ b/public/V2/Items/Items.html
@@ -116,9 +116,9 @@
 
     </header>
     <main>
-        <section class="py-5 mt-5">
+        <section class="py-1 mt-3">
             <div class="container">
-                <nav aria-label="breadcrumb">
+                <nav class="mt-3"aria-label="breadcrumb">
                     <ol class="breadcrumb mb-4">
                         <li class="breadcrumb-item">
                             <a href="../V2.html" class="d-flex align-items-center">
@@ -129,7 +129,7 @@
                     </ol>
                 </nav>
 
-                <div class="row justify-content-center g-5">
+                <div class="row justify-content-center g-4">
                     <div class="col-md-5">
                         <div class="card shadow-lg border-0 rounded-4">
                             <div class="card-header bg-gradient bg-warning text-white text-center rounded-top-4">
