--- a/public/V2/Items/alter.html
+++ b/public/V2/Items/alter.html
@@ -123,7 +123,7 @@
             </a>
         </div>
         <div class="container">
-            <nav aria-label="breadcrumb">
+            <nav class="mt-4" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
                     <li class="breadcrumb-item"><a href="./Items.html">Items</a></li>
