--- a/public/V2/Items/insertfooter.html
+++ b/public/V2/Items/insertfooter.html
@@ -131,15 +131,15 @@
             </a>
         </div>
         <div class="container">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
+           <nav class="mt-2" aria-label="breadcrumb">
+                <ol class="breadcrumb mb-3">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
                     </li>
                     </a>
                     <li class="breadcrumb-item"><a href="./Items.html">Items</a></li>
                    <li class="breadcrumb-item " aria-current="page">Insert Footer</li>
             </nav>
-            <div class="card mt-5">
+            <div class="card mt-4">
                 <div class="card-body">
                     <div class="table-responsive">
                         <table id="table" class="table" data-show-footer="true">
