--- a/public/V2/Items/show.html
+++ b/public/V2/Items/show.html
@@ -72,8 +72,7 @@
                                     style="font-size: 1.5rem;"></i> Insert
                             </a>
                         <li class="nav-item ">
-                            <a class="nav-link text-white rounded text-center "
-                                href="./insertfooter.html">
+                            <a class="nav-link text-white rounded text-center " href="./insertfooter.html">
                                 <i class="bi bi-building-add text-info d-block mb-1 fs-4"></i>
                                 Insert_F
                             </a>
@@ -110,10 +109,10 @@
         </div>
 
     </header>
-    <main>
+     <main class="content">
         <div id="toolbar" class="">
             <a id="RefreshATagId" href="#"
-                class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-dark text-white"
+                class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-gray-600 text-white"
                 style="width: 40px; height: 40px; border-radius: 50%;">
                 <svg class="icon icon-xs" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16"
                     width="16" height="16">
@@ -125,7 +124,7 @@
             </a>
         </div>
         <div class="container">
-            <nav aria-label="breadcrumb">
+           <nav class="mt-4" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
                     <li class="breadcrumb-item"><a href="./Items.html">Items</a></li>
