--- a/public/V2/Sales/Sales.html
+++ b/public/V2/Sales/Sales.html
@@ -76,7 +76,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="./tFInTH.html">
+                            <a class="nav-link text-white text-center" href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
                             </a>
@@ -114,15 +114,15 @@
 
     </header>
     <main>
-        <section class="py-5 mt-5">
+        <section class="py-2 mt-3">
             <div class="container">
-                <nav aria-label="breadcrumb">
+                <nav class="mt-4" aria-label="breadcrumb">
                     <ol class="breadcrumb mb-4">
                         <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
                         <li class="breadcrumb-item">Sales</a></li>
 
                 </nav>
-                <section class="py-5 mt-5">
+                <section class="py-2 mt-3">
                     <div class="container">
                         <div class="row justify-content-center g-5">
                             <div class="col-md-5">
@@ -147,14 +147,7 @@
                                                     </a>
                                                 </li>
                                                 <li>
-                                                <li>
-                                                    <a class="dropdown-item d-flex align-items-center"
-                                                        href="tFInTH.html">
-                                                        <i class="bi bi-journal-plus text-warning me-3 fs-5"></i>
-                                                        <span>Insert Header</span>
-                                                    </a>
-                                                </li>
-
+                                              
                                                 <li>
                                                     <a class="dropdown-item d-flex align-items-center" href="crud.html">
                                                         <i class="bi bi-building-add text-info me-3 fs-5"></i>
@@ -162,6 +155,14 @@
                                                     </a>
                                                 </li>
                                                 <li>
+                                                      <li>
+                                                    <a class="dropdown-item d-flex align-items-center"
+                                                        href="tFInTH.html">
+                                                        <i class="bi bi-journal-plus text-warning me-3 fs-5"></i>
+                                                        <span>Insert Header</span>
+                                                    </a>
+                                                </li>
+
 
 
 
