--- a/public/V2/Sales/create.html
+++ b/public/V2/Sales/create.html
@@ -81,7 +81,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="./tFInTH.html">
+                            <a class="nav-link text-white text-center" href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
                             </a>
@@ -138,10 +138,11 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
-                    <li class="breadcrumb-item">Sales</a></li>
+
+                    <li class="breadcrumb-item"><a href="./Sales.html">Sales</a></li>
                     <li class="breadcrumb-item">Insert<Footer></Footer></a></li>
             </nav>
-            <div class="card mt-5">
+            <div class="card mt-4">
                 <div class="card-body">
                     <form onsubmit="return false" id="FormId">
                         <div class="mb-3 row">
