--- a/public/V2/Sales/crud.html
+++ b/public/V2/Sales/crud.html
@@ -51,7 +51,7 @@
                     </a>
 
 
-                   <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
 
                         <li>
                             <a href="../V2.html" class="nav-link text-white text-center">
@@ -83,8 +83,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white"
-                                href="./tFInTH.html">
+                            <a class="nav-link text-white text-center" href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
                             </a>
@@ -137,7 +136,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
-                    <li class="breadcrumb-item">Sales</a></li>
+                  <li class="breadcrumb-item"><a href="./Sales.html">Sales</a></li>
                     <li class="breadcrumb-item">Insert Footer <Footer></Footer></a></li>
             </nav>
             <div class="card mt-5">
