--- a/public/V2/Sales/delete.html
+++ b/public/V2/Sales/delete.html
@@ -79,7 +79,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white"
+                            <a class="nav-link text-white text-center"
                                 href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
@@ -133,10 +133,10 @@
             </a>
         </div>
         <div class="container">
-            <nav aria-label="breadcrumb">
+            <nav class="mt-4" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
-                    <li class="breadcrumb-item">Sales</a></li>
+                   <li class="breadcrumb-item"><a href="./Sales.html">Sales</a></li>
                     <li class="breadcrumb-item">Delete</a></li>
             </nav>
             <div class="card mt-5">
