--- a/public/V2/Farmers/crud.html
+++ b/public/V2/Farmers/crud.html
@@ -83,8 +83,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white rounded text-center"
-                                href="./tFInTH.html">
+                            <a class="nav-link text-white rounded text-center" href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
                             </a>
@@ -134,7 +133,7 @@
             </a>
         </div>
         <div class="container">
-           <nav class="mt-1" aria-label="breadcrumb">
+            <nav class="mt-1" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
                     <li class="breadcrumb-item"><a href="./Farmers.html">Farmers</a></li>
@@ -168,16 +167,16 @@
                                     </th>
                                     <th>
                                         <div class="input-group">
-                                            <input name="Mobile" id="TableFooterItemCategoryInputId" type="number"
-                                                placeholder="Enter FarmerCity" class="form-control" autocomplete="off"
-                                                id="TableFooterItemCategoryInputId"
-                                                list="TableFooterItemCategoryInputId" required
+                                            <input name="Mobile" id="TableFooterItemCategoryInputId" type="text"
+                                                placeholder="Enter Mobile Number" class="form-control"
+                                                autocomplete="off" required
                                                 oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10)">
-                                            <datalist id="TableFooterItemCategoryInputId">
-                                                <div class="invalid-feedback">
-                                                    Please provide correct Mobile.
-                                                </div>
+                                            <div class="invalid-feedback">
+                                                Please provide correct Mobile Number.
+                                            </div>
                                         </div>
+
+
                                     </th>
 
                                     <th>
