--- a/public/V2/Farmers/tFInTH.html
+++ b/public/V2/Farmers/tFInTH.html
@@ -176,16 +176,14 @@
                                         </div>
                                     </th>
                                     <th>
-                                        <div class="input-group">
-                                            <input name="Mobile" id="TableFooterItemCategoryInputId" type="number"
-                                                placeholder="Enter FarmerCity" class="form-control" autocomplete="off"
-                                                id="TableFooterItemCategoryInputId"
-                                                list="TableFooterItemCategoryInputId" required
+                                       <div class="input-group">
+                                            <input name="Mobile" id="TableFooterItemCategoryInputId" type="text"
+                                                placeholder="Enter Mobile Number" class="form-control"
+                                                autocomplete="off" required
                                                 oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10)">
-                                            <datalist id="TableFooterItemCategoryInputId">
-                                                <div class="invalid-feedback">
-                                                    Please provide correct Mobile.
-                                                </div>
+                                            <div class="invalid-feedback">
+                                                Please provide correct Mobile Number.
+                                            </div>
                                         </div>
                                     </th>
 
