--- a/public/index.html
+++ b/public/index.html
@@ -36,54 +36,66 @@
 </head>
 
 <body>
-   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="#">
-                <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
-                KeshavSoft
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
-                aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-        </div>
-    </nav>
-</header>
-
-   <main>
-    <section class="py-5 mt-5">
-        <div class="container">
-            <div class="row justify-content-center g-4">
-                <!-- Sales Card -->
-                <div class="col-md-4">
-                    <div class="card shadow-lg border-0 rounded-4">
-                        <div class="card-header bg-gradient bg-primary text-white text-center rounded-top-4">
-                            <h4 class="mb-0"><i class="bi bi-bar-chart-line"></i> V1 </h4>
-                        </div>
-                        <div class="card-body text-center">
-                           <a href="./V1/V1.html" class="btn btn-outline-primary btn-lg w-75">Access V1 Directory</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Farmers Card -->
-                <div class="col-md-4">
-                    <div class="card shadow-lg border-0 rounded-4">
-                        <div class="card-header bg-gradient bg-success text-white text-center rounded-top-4">
-                            <h4 class="mb-0"><i class="bi bi-person-bounding-box"></i> V2 </h4>
-                        </div>
-                        <div class="card-body text-center">
-                            <a href="./V2/V2.html" class="btn btn-outline-success btn-lg w-75">Access V2 Directory</a>
-                        </div>
-                    </div>
-                </div>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand d-flex align-items-center" href="#">
+                    <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
+                    KeshavSoft
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
+                    aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
             </div>
-        </div>
-    </section>
-</main>
+        </nav>
+    </header>
+
+    <main>
+        <section class="py-5 mt-5">
+            <div class="container">
+                <div class="row justify-content-center g-4">
+                    <!-- Sales Card -->
+                    <div class="col-md-4">
+                        <div class="card shadow-lg border-0 rounded-4">
+                            <div class="card-header bg-gradient bg-primary text-white text-center rounded-top-4">
+                                <h4 class="mb-0"><i class="bi bi-bar-chart-line"></i> V1 </h4>
+                            </div>
+                            <div class="card-body text-center">
+                                <a href="./V1/V1.html" class="btn btn-outline-primary btn-lg w-75">Access V1
+                                    Directory</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Farmers Card -->
+                    <div class="col-md-4">
+                        <div class="card shadow-lg border-0 rounded-4">
+                            <div class="card-header bg-gradient bg-success text-white text-center rounded-top-4">
+                                <h4 class="mb-0"><i class="bi bi-person-bounding-box"></i> V2 </h4>
+                            </div>
+                            <div class="card-body text-center">
+                                <a href="./V2/V2.html" class="btn btn-outline-success btn-lg w-75">Access V2
+                                    Directory</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card shadow-lg border-0 rounded-4">
+                            <div class="card-header bg-gradient bg-info text-white text-center rounded-top-4">
+                                <h4 class="mb-0"><i class="bi bi-bar-chart-line"></i> V3 </h4>
+                            </div>
+                            <div class="card-body text-center">
+                                <a href="./V3/V3.html" class="btn btn-outline-info btn-lg w-75">Access V3
+                                    Directory</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
 
