--- a/public/V3/Items/delete.html
+++ b/public/V3/Items/delete.html
@@ -52,17 +52,18 @@
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="../V3.html" class="nav-link text-white text-center">
+                            <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
+
+
                         <li class="nav-item">
                             <a href="./Items.html" class="nav-link text-white d-flex flex-column align-items-center">
-                                <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-arrow-90deg-left" style="font-size: 1.5rem;"></i>
                                 <span>Parent</span>
                             </a>
                         </li>
-
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Create.html">
@@ -125,13 +126,13 @@
             </a>
         </div>
         <div class="container">
-            <nav class="mt-3" aria-label="breadcrumb">
-                <ol class="breadcrumb mb-3">
-                    <li class="breadcrumb-item"><a href="../V3.html" class="bi bi-house me-1"></i></a>
+           <nav class="mt-4" aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
                     <li class="breadcrumb-item"><a href="./Items.html">Items</a></li>
                     <li class="breadcrumb-item">Delete</a></li>
             </nav>
-            <div class="card mt-4">
+            <div class="card mt-5">
                 <div class="card-body">
                     <div class="table-responsive">
                         <table id="table" class="table table-bordered table-striped">
