--- a/public/V3/Farmers/show.html
+++ b/public/V3/Farmers/show.html
@@ -54,7 +54,7 @@
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
 
                         <li>
-                            <a href="../V3.html" class="nav-link text-white text-center">
+                            <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -83,7 +83,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white rounded text-center" href="./tFInTH.html">
+                            <a class="nav-link text-white rounded text-center"
+                                href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
                             </a>
@@ -134,13 +135,13 @@
             </a>
         </div>
         <div class="container">
-            <nav class="mt-3" aria-label="breadcrumb">
-                <ol class="breadcrumb mb-3">
+           <nav class="mt-4" aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
-                    <li class="breadcrumb-item"><a href="./Farmers.html">Farmers</a></li>
+                   <li class="breadcrumb-item"><a href="./Farmers.html">Farmers</a></li>
                     <li class="breadcrumb-item">Show</a></li>
             </nav>
-            <div class="card mt-4">
+            <div class="card mt-5">
                 <div class="card-body">
                     <div class="table-responsive">
                         <table id="table" class="table table-bordered table-striped">
