--- a/public/V3/Sales/Sales.html
+++ b/public/V3/Sales/Sales.html
@@ -50,7 +50,7 @@
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <!-- Home -->
                         <li>
-                            <a href="../V3.html" class="nav-link text-white text-center">
+                            <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -114,12 +114,11 @@
 
     </header>
     <main>
-        <section class="py-1 mt-1">
+        <section class="py-2 mt-3">
             <div class="container">
-                <nav class="mt-2" aria-label="breadcrumb">
-                    <ol class="breadcrumb mb-5">
-
-                        <li class="breadcrumb-item"><a href="../V3.html" class="bi bi-house me-1"></i></a>
+                <nav class="mt-4" aria-label="breadcrumb">
+                    <ol class="breadcrumb mb-4">
+                        <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
                         <li class="breadcrumb-item">Sales</a></li>
 
                 </nav>
@@ -148,7 +147,7 @@
                                                     </a>
                                                 </li>
                                                 <li>
-
+                                              
                                                 <li>
                                                     <a class="dropdown-item d-flex align-items-center" href="crud.html">
                                                         <i class="bi bi-building-add text-info me-3 fs-5"></i>
@@ -156,7 +155,7 @@
                                                     </a>
                                                 </li>
                                                 <li>
-                                                <li>
+                                                      <li>
                                                     <a class="dropdown-item d-flex align-items-center"
                                                         href="tFInTH.html">
                                                         <i class="bi bi-journal-plus text-warning me-3 fs-5"></i>
@@ -167,10 +166,11 @@
 
 
 
-                                                <a class="dropdown-item d-flex align-items-center" href="./show.html">
-                                                    <i class="bi bi-eye text-success me-3 fs-5"></i>
-                                                    <span>Show</span>
-                                                </a>
+                                                    <a class="dropdown-item d-flex align-items-center"
+                                                        href="./show.html">
+                                                        <i class="bi bi-eye text-success me-3 fs-5"></i>
+                                                        <span>Show</span>
+                                                    </a>
                                                 </li>
                                                 <li>
                                                     <a class="dropdown-item d-flex align-items-center"
