--- a/public/V3/Sales/crud.html
+++ b/public/V3/Sales/crud.html
@@ -54,7 +54,7 @@
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
 
                         <li>
-                            <a href="../V3.html" class="nav-link text-white text-center">
+                            <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -83,34 +83,12 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./tFInTH.html">
+                            <a class="nav-link text-white text-center" href="#" id="HeaderItemFarmersId">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
-                                Insert_H
+                                Farmers
                             </a>
                         </li>
 
-
-                        <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./show.html">
-                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
-                                Show
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./alter.html">
-                                <i class="bi bi-pencil-square  text-warning d-block mb-1"
-                                    style="font-size: 1.5rem;"></i>
-                                Alter
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./Delete.html">
-                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
-                                Delete
-                            </a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -119,94 +97,64 @@
 
     </header>
     <main class="content">
-       
         <div class="container">
-            <nav class="mt-3" aria-label="breadcrumb">
-                <ol class="breadcrumb mb-3">
-                    <li class="breadcrumb-item"><a href="../V3.html" class="bi bi-house me-1"></i></a>
+            <nav aria-label="breadcrumb" class="mt-2">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
                     <li class="breadcrumb-item"><a href="./Sales.html">Sales</a></li>
-                    <li class="breadcrumb-item">Insert Footer <Footer></Footer></a></li>
+                    <li class="breadcrumb-item"><a href="#" class="RefreshBSTableClass">Insert in footer</a></li>
             </nav>
-            <div class="card mt-4">
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table id="table" class="table" data-show-footer="true">
-                            <thead>
-                                <tr>
-                                    <th data-formatter="jFLocalSerialColumn" data-width="50">#</th>
-                                    <th data-field="PARTYNAME" data-width="350">PartyName</th>
-                                    <th data-field="VOUCHERTYPE" data-width="200">VoucherType</th>
-                                    <th data-field="DATE" data-width="200">Date</th>
-                                    <th data-field="REFERENCE" data-width="200">Reference</th>
-                                    <th data-field="VOUCHERCANCELLED" data-width="200">VoucherCancelled</th>
-                                    <th data-width="100">Opts.</th>
-                                </tr>
-                            </thead>
-                            <tfoot>
-                                <tr>
-                                    <th></th>
-                                    <th>
-                                        <div class="input-group">
-                                            <input type="text" class="form-control" id="TableFooterPartyNameInputId"
-                                                autocomplete="off" placeholder="Enter PartyName" required>
-                                            <div class="invalid-feedback">
-                                                Please provide correct Name.
-                                            </div>
-                                        </div>
-                                    </th>
+            <div class="table-responsive">
+                <table id="table" class="table" data-show-footer="true">
+                    <thead>
+                        <tr>
+                            <th data-formatter="jFLocalSerialColumn" data-width="50">#</th>
+                            <th data-field="PARTYNAME" data-width="350">PartyName</th>
+                            <th data-field="DATE" data-width="200">Date</th>
+                            <th data-width="100">Opts.</th>
+                        </tr>
+                    </thead>
+                    <tfoot>
+                        <tr>
+                            <th></th>
+                            <th>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" id="TableFooterPartyNameInputId"
+                                        autocomplete="off" placeholder="Enter PartyName" required list="FarmersDataListId">
+                                    <datalist id="FarmersDataListId">
+                                        <option value="Chrome"></option>
+                                        <option value="Firefox"></option>
+                                        <option value="Opera"></option>
+                                        <option value="Safari"></option>
+                                        <option value="Microsoft Edge"></option>
+                                    </datalist>
 
-                                    <th>
-                                        <div class="input-group">
-                                            <input class="form-control" id="TableFooterVoucherTypeInputId" type="text"
-                                                placeholder="Enter VoucherType">
-                                            <div class="invalid-feedback">
-                                                Please enter Valid VoucherType
-                                            </div>
-                                        </div>
-                                    </th>
-
-                                    <th>
-                                        <div class="input-group">
-                                            <input class="form-control" id="TableFooterDateInputId" type="date"
-                                                placeholder="Enter Date">
-                                            <div class="invalid-feedback">
-                                                Please enter Valid date
-                                            </div>
-                                        </div>
-                                    </th>
-
-                                    <th>
-                                        <div class="input-group">
-                                            <input class="form-control" id="TableFooterReferenceInputId" type="text"
-                                                placeholder="Enter Valid Reference">
-                                            <div class="invalid-feedback">
-                                                Please enter Valid Reference
-                                            </div>
-                                        </div>
-                                    </th>
-
-                                    <th>
-                                        <div class="input-group">
-                                            <input class="form-control" id="TableFooterVoucherCancelledInputId"
-                                                type="text" placeholder="Enter VoucherCancelled">
-                                            <div class="invalid-feedback">
-                                                Please enter Valid VoucherCancelled
-                                            </div>
-                                        </div>
-                                    </th>
+                                    <div class="invalid-feedback">
+                                        Please provide correct Name.
+                                    </div>
+                                </div>
+                            </th>
 
 
-                                    <th class="text-start">
-                                        <button class="btn btn-outline-success" type="button"
-                                            id="TableFooterSaveButtonId">
-                                            Save
-                                        </button>
-                                    </th>
-                                </tr>
-                            </tfoot>
-                        </table>
-                    </div>
-                </div>
+                            <th>
+                                <div class="input-group">
+                                    <input class="form-control" id="TableFooterDateInputId" type="date"
+                                        placeholder="Enter Date">
+                                    <div class="invalid-feedback">
+                                        Please enter Valid date
+                                    </div>
+                                </div>
+                            </th>
+
+
+                            <th class="text-start">
+                                <button class="btn btn-outline-success" type="button" id="TableFooterSaveButtonId">
+                                    Save
+                                </button>
+                            </th>
+                        </tr>
+                    </tfoot>
+                </table>
             </div>
         </div>
     </main>
@@ -252,6 +200,7 @@
             return index + 1;
         };
     </script>
+
     <script type="module" src="./Js/Crud/entryFile.js"></script>
 </body>
 
