--- a/public/V3/Sales/delete.html
+++ b/public/V3/Sales/delete.html
@@ -41,19 +41,18 @@
 <body>
     <header>
         <div class="px-3 py-2 text-bg-dark border-bottom">
-            <div class="container">
-                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-                    <a href="/"
-                        class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                        <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
-                        <span class="fs-4">KeshavSoft</span>
-                    </a>
+                <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+                    <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
+                    <span class="fs-4">KeshavSoft</span>
+                </a>
 
-                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+                   <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
 
                         <li>
-                            <a href="../V3.html" class="nav-link text-white text-center">
+                            <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -80,7 +79,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./tFInTH.html">
+                            <a class="nav-link text-white text-center"
+                                href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
                             </a>
@@ -133,13 +133,13 @@
             </a>
         </div>
         <div class="container">
-            <nav class="mt-3" aria-label="breadcrumb">
-                <ol class="breadcrumb mb-3">
-                    <li class="breadcrumb-item"><a href="../V3.html" class="bi bi-house me-1"></i></a>
-                    <li class="breadcrumb-item"><a href="./Sales.html">Sales</a></li>
+            <nav class="mt-4" aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
+                   <li class="breadcrumb-item"><a href="./Sales.html">Sales</a></li>
                     <li class="breadcrumb-item">Delete</a></li>
             </nav>
-            <div class="card mt-4">
+            <div class="card mt-5">
                 <div class="card-body">
                     <div class="table-responsive">
                         <table id="table" class="table table-bordered table-striped">
